# kaioretry

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: mypy.yml  pylint.yml  python-app.yml
docs/source/: conf.py  decorators.rst  getting-started.rst  index.rst  introduction.rst  kaioretry.rst
kaioretry/: __init__.py  context.py  decorator.py  types.py
test/static_analysis/: 11_retry_object_method.py  12_retry_object_method_async.py  13_retry_object_method_sync_async.py  21_retry_object.py  22_retry_object_async.py  31_main_retry.py  32_main_aioretry.py  33_main_retry_named_args.py  34_main_aioretry_named_args.py  aioretry_built_by_call_async_args_any_any.py  aioretry_built_by_call_async_args_any_str.py  aioretry_built_by_call_async_args_int_any.py  aioretry_built_by_call_async_args_int_str.py  aioretry_built_by_call_async_kwargs_any_any.py  aioretry_built_by_call_async_kwargs_any_str.py  aioretry_built_by_call_async_kwargs_int_any.py  aioretry_built_by_call_async_kwargs_int_str.py  aioretry_built_by_call_async_param_any_any.py  aioretry_built_by_call_async_param_any_str.py  aioretry_built_by_call_async_param_int_any.py  aioretry_built_by_call_async_param_int_str.py  aioretry_built_by_call_sync_args_any_any.py  aioretry_built_by_call_sync_args_any_str.py  aioretry_built_by_call_sync_args_int_any.py  aioretry_built_by_call_sync_args_int_str.py  aioretry_built_by_call_sync_kwargs_any_any.py  aioretry_built_by_call_sync_kwargs_any_str.py  aioretry_built_by_call_sync_kwargs_int_any.py  aioretry_built_by_call_sync_kwargs_int_str.py  aioretry_built_by_call_sync_param_any_any.py  aioretry_built_by_call_sync_param_any_str.py  aioretry_built_by_call_sync_param_int_any.py  aioretry_built_by_call_sync_param_int_str.py  aioretry_built_direct_async_args_int_str.py  aioretry_built_direct_async_kwargs_int_str.py  aioretry_built_direct_async_param_int_str.py  aioretry_built_direct_sync_args_any_any.py  aioretry_built_direct_sync_args_any_str.py  aioretry_built_direct_sync_args_int_any.py  aioretry_built_direct_sync_args_int_str.py  (+236 more)
test/unit/: conftest.py  mock.py  test_context.py  test_decorator.py  test_kaioretry.py
tools/: filter-static-analysis-tests  generate-tests  merge  set-version
