[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kaioretry"
version = "1.1.1"
description = "All in one retry and aioretry decorators"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-2.1-or-later"
keywords = ["retry", "decorator", "asyncio"]
authors = [
    {name = "Damien Nadé", email= "anvil.github+kaioretry@livna.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[project.urls]
Repository = "https://github.com/Anvil/kaioretry/"
Issues = "https://github.com/Anvil/kaioretry/issues"
Documentation = "https://kaioretry.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.10"
typing_extensions = ">=4.5.0"
mypy-extensions = ">=1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">6"
pytest-asyncio = "^0.20"
pytest-mock = "^3.10"
pytest-cases = "^3.6"
pytest-cov = ">=4"

[tool.poetry.group.sphinx]
optional = true

[tool.poetry.group.sphinx.dependencies]
sphinx = ">=7"
sphinx-autodoc-typehints = ">=1.17"
sphinx-rtd-theme = ">=2"

[tool.mypy]
color_output = true
ignore_missing_imports = false
pretty = true
raise_exceptions = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_error_end = true
show_traceback = true
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_decorators = true
packages = ["kaioretry", "test.static_analysis"]

[tool.black]
line-length = 79
include = '\.pyi?$'
